--- a/config.toml
+++ b/config.toml
@@ -56,6 +56,11 @@ paginate = 10
     identifier = "publications"
     weight = 400
 
+[[menu.main]]
+    name = "About"
+    url = "/about"
+    weight = 500
+
 
 # Members
 [[params.members]]
