--- a/wercker.yml
+++ b/wercker.yml
@@ -20,10 +20,11 @@ build:
     # Read more about steps on our dev center:
     # http://devcenter.wercker.com/docs/steps/index.html
   steps:
+    - install-packages:
+        packages: git
     - script:
         name: prepare-themes
         code: |
-          apt-get install -y git
           git clone https://github.com/snlab-freedom/hugo-theme-cooler $WERCKER_SOURCE_DIR/themes/hugo-theme-cooler
     - arjen/hugo-build@1.13.1:
         theme: hugo-theme-cooler
