--- a/wercker.yml
+++ b/wercker.yml
@@ -31,6 +31,8 @@ build:
         flags: --buildDrafts=true
 deploy:
   steps:
+    - install-packages:
+        packages: git ssh-client
     - lukevivier/gh-pages@0.2.1:
         token: $GIT_TOKEN
         basedir: public
