Refactor deploy branch to master
Signed-off-by: jensenzhang <jingxuan.n.zhang@gmail.com>

--- a/wercker.yml
+++ b/wercker.yml
@@ -35,4 +35,5 @@ deploy:
         packages: git ssh-client
     - lukevivier/gh-pages@0.2.1:
         token: $GIT_TOKEN
+        branch: master
         basedir: public
