--- a/wercker.yml
+++ b/wercker.yml
@@ -33,7 +33,7 @@ deploy:
   steps:
     - install-packages:
         packages: git ssh-client
-    - lukevivier/gh-pages@0.2.4:
+    - lukevivier/gh-pages:
         token: $GIT_TOKEN
         branch: master
         basedir: public
