Change deploy step to uetchy
Signed-off-by: jensenzhang <jingxuan.n.zhang@gmail.com>

--- a/wercker.yml
+++ b/wercker.yml
@@ -2,7 +2,7 @@
 # Docker Hub https://registry.hub.docker.com/_/debian/
 # Read more about containers on our dev center
 # http://devcenter.wercker.com/docs/containers/index.html
-box: debian
+box: golang
 # You can also use services such as databases. Read more on our dev center:
 # http://devcenter.wercker.com/docs/services/index.html
 # services:
@@ -31,9 +31,6 @@ build:
         flags: --buildDrafts=true
 deploy:
   steps:
-    - install-packages:
-        packages: git ssh-client
-    - lukevivier/gh-pages:
+    - uetchy/gh-pages:
         token: $GIT_TOKEN
-        branch: master
         basedir: public
