--- a/wercker.yml
+++ b/wercker.yml
@@ -27,8 +27,9 @@ build:
         code: |
           git clone https://github.com/snlab-freedom/hugo-theme-cooler $WERCKER_SOURCE_DIR/themes/hugo-theme-cooler
           cd $WERCKER_SOURCE_DIR/themes/hugo-theme-cooler
-          git checkout 4a71cc3
-    - arjen/hugo-build@1.13.1:
+          git checkout 25f74e3
+    - arjen/hugo-build@1.29.1:
+        version: 0.36.1
         theme: hugo-theme-cooler
         flags: --buildDrafts=true
 deploy:
